--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is a basic website hosted on GitHub Pages.</p>
+    <button id="clickMe">Click me!</button>
+    <p id="message"></p>
+    <script src="script.js"></script>
 </body>
 </html>
