--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is a basic website hosted on GitHub Pages.</p>
+    <button id="clickMe">Click me!</button>
+    <p id="message"></p>
 </body>
 </html>
