--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>This is a basic website hosted on GitHub Pages.</p>
     <button id="clickMe">Click me!</button>
     <p id="message"></p>
+    <script src="script.js"></script>
 </body>
 </html>
