--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a basic website hosted on GitHub Pages.</p>
-    <button id="clickMe">Click me!</button>
-    <p id="message"></p>
+    <header>
+        <h1>Welcome to My GitHub Page</h1>
+    </header>
+    <section>
+        <p>This is a basic website hosted on GitHub Pages.</p>
+        <button id="clickMe">Click me!</button>
+        <p id="message"></p>
+    </section>
+    <section>
+        <h2>More About Me</h2>
+        <p>Here are a few links you might find interesting:</p>
+        <ul>
+            <li><a href="https://github.com">GitHub</a></li>
+            <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+            <li><a href="https://developer.mozilla.org">MDN Web Docs</a></li>
+        </ul>
+        <img src="https://via.placeholder.com/400" alt="Placeholder image">
+    </section>
+    <footer>
+        <p>Made with ♥ by [Your Name]</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
