--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="https://github.com">GitHub</a></li>
             <li><a href="https://www.linkedin.com">LinkedIn</a></li>
             <li><a href="https://developer.mozilla.org">MDN Web Docs</a></li>
+            <li><a href="about.html">About Me</a></li>
         </ul>
         <img src="https://via.placeholder.com/400" alt="Placeholder image">
     </section>
