--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Website with Video Background</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Video Background -->
+    <video autoplay muted loop id="bgVideo">
+        <source src="your-video.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+
+    <!-- Content -->
     <header>
-        <h1>Welcome to My GitHub Page</h1>
+        <h1>Welcome to My Website</h1>
     </header>
+
     <section>
-        <p>This is a basic website hosted on GitHub Pages.</p>
-        <button id="clickMe">Click me!</button>
-        <p id="message"></p>
+        <p>This is the main content of the website.</p>
+        <button>Click Me</button>
     </section>
-    <section>
-        <h2>More About Me</h2>
-        <p>Here are a few links you might find interesting:</p>
-        <ul>
-            <li><a href="https://github.com">GitHub</a></li>
-            <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-            <li><a href="https://developer.mozilla.org">MDN Web Docs</a></li>
-            <li><a href="about.html">About Me</a></li>
-        </ul>
-        <img src="https://via.placeholder.com/400" alt="Placeholder image">
-    </section>
+
     <footer>
-        <p>Made with ♥ by [Your Name]</p>
+        <p>© 2024 Your Name</p>
     </footer>
-    <script src="script.js"></script>
+
 </body>
 </html>
