--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Video Background -->
     <video autoplay muted loop id="bgVideo">
-        <source src="your-video.mp4" type="video/mp4">
+        <source src="https://motionbgs.com/media/5675/anime-boy-and-dragon.960x540.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
     </video>
 
