--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
 
     <section>
         <p>This is the main content of the website.</p>
-        <button>Click Me</button>
+        <div class="buttons">
+    <button onclick="showPolicy('privacy')">Privacy Policy</button>
+    <button onclick="showPolicy('terms')">Terms and Conditions</button>
+</div>
+
+<!-- Modals for Privacy Policy and Terms & Conditions -->
+<div id="modal" class="modal" style="display: none;">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <div id="modal-text"></div>
+    </div>
+</div>
     </section>
 
     <footer>
